fix: spacing on bottom of pages without comment on small screens
And adjust margin below contact form.

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -301,6 +301,16 @@
 	}
 }
 
+.no-comments {
+	.page {
+		&__body {
+			&--single-page {
+				padding-bottom: cssVar(spacing-md);
+			}
+		}
+	}
+}
+
 .articles-list,
 .no-comments {
 	.page {
