--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -4,7 +4,7 @@
 			margin-top: 0;
 		}
 
-		&__body  {
+		&__body {
 			> p {
 				&:first-of-type {
 					margin-top: cssVar(spacing-sm);
@@ -15,6 +15,8 @@
 }
 
 .contact-form {
+	margin-bottom: cssVar(spacing-md);
+
 	&__item {
 		margin-bottom: cssVar(spacing-md);
 
